[gd_scene load_steps=8 format=3 uid="uid://ul1w4gg7kpwi"]

[ext_resource type="AudioStream" uid="uid://lagliydwmweo" path="res://assets/sound-effects/enemy-lose4.ogg" id="1_g5net"]
[ext_resource type="Script" uid="uid://c553mv3sh1ivo" path="res://sound_manager.gd" id="1_mdjn0"]
[ext_resource type="AudioStream" uid="uid://wej4yuo1owaf" path="res://assets/sound-effects/coin-coin3.ogg" id="3_22ksp"]
[ext_resource type="AudioStream" uid="uid://bqe613eej6q85" path="res://assets/sound-effects/button-maximize_007.ogg" id="4_h8btt"]
[ext_resource type="AudioStream" uid="uid://dx552di7urbv2" path="res://assets/sound-effects/fall-gameover2.ogg" id="5_7jwsb"]
[ext_resource type="AudioStream" uid="uid://ilnww5uwd6ay" path="res://assets/music/Menu-RetroMystic.ogg" id="6_7jwsb"]
[ext_resource type="AudioStream" uid="uid://qp8ate6w5ajj" path="res://assets/music/Level-RetroBeat.ogg" id="7_h42hm"]

[node name="SoundManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mdjn0")

[node name="SoundEnemy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_g5net")
volume_db = -20.693

[node name="SoundCoin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_22ksp")
volume_db = -15.333

[node name="SoundButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_h8btt")
volume_db = -15.333

[node name="SoundFall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7jwsb")
volume_db = -19.328

[node name="MusicMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7jwsb")
volume_db = -19.328

[node name="MusicLevel" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_h42hm")
volume_db = -19.328
